# CreditRisk

./: .dockerignore  .gitignore  Dockerfile.api  Dockerfile.batch  LICENSE  README.md  dvc.yaml  pyproject.toml  requirements.txt  sample_payload.json
.github/workflows/: cd.yaml  ci.yaml  nightly.yaml
configs/: baseline.yaml  creditrisk_pd.yaml
data/: README.md
data/raw/: application_train.csv.dvc
docs/: api_usage.md  architecture.md  ci_cd.md  cloud_setup.md  current_state.md  governance_artifacts.md  local_pipeline.md  local_stack_setup.md  mlops-pipeline.md  project_plan.md
notebooks/: 01_home_credit_default_risk_eda.py  another_copy_of_home_credit_default_risk_eda (1).py  another_copy_of_home_credit_default_risk_eda (3).py
orchestration/: airflow_creditrisk_dag.py
reports/: .gitignore  metrics.json
reports/evaluation/: confusion_matrix.json
src/creditrisk/: __init__.py  config.py
src/creditrisk/data/: datasets.py
src/creditrisk/features/: feature_store.py  preprocess.py
src/creditrisk/mlops/: registry.py
src/creditrisk/models/: baseline.py  creditrisk_pd.py
src/creditrisk/monitoring/: __init__.py  drift.py  production.py
src/creditrisk/observability/: logging.py
src/creditrisk/serve/: __init__.py  (+2 more)
tests/: conftest.py  test_batch_predict.py  test_canary_validation.py  test_drift_monitoring.py  test_evaluation_utils.py  test_ingest_data.py  test_lineage_utils.py  test_models_baseline.py  test_monitoring_production.py  test_post_training_validation.py  test_serve_api.py  test_test_dataset_stage.py  test_validation_contracts.py  utils.py
(+21 files in other folders)
